[project]
name = "semantic-caching-with-redis-langcache"
version = "0.1.0"
description = "A semantic caching demo for Redis LangCache with FastAPI and Python"
authors = [
  { name = "Will Johnston", email = "will.johnston@redis.com" }
]
maintainers = [
  { name = "Will Johnston", email = "will.johnston@redis.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["python", "fastapi", "redis", "starter", "redis-py"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python"
]
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langcache>=0.11.1",
    "openai>=1.82.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Repository = "https://github.com/redis-developer/semantic-caching-with-redis-langcache.git"
"Bug Tracker" = "https://github.com/redis-developer/semantic-caching-with-redis-langcache/issues"

[project.optional-dependencies]
dev = [
    "mypy<2.0.0,>=1.19.1",
    "ruff<1.0.0,>=0.15.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"

[tool.mypy]
strict = true
disallow_untyped_calls = false
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
